[project]
name = "ai-pr-reviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "fastapi>=0.136.3",
    "flower>=2.0.1",
    "google-genai>=2.7.0",
    "groq>=1.4.0",
    "langchain-core>=1.4.0",
    "langfuse>=4.7.1",
    "langgraph>=1.2.4",
    "prometheus-client>=0.25.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "requests>=2.34.2",
    "structlog>=25.5.0",
    "uvicorn>=0.48.0",
]
